--- a/example/test.html
+++ b/example/test.html
@@ -15,7 +15,7 @@
 <script src="../npm/entry.js"></script>
 
 <!-- 验证 cdn 引入方式 -->
-<script src="../cdn/wpmonit.js?v=1.1"></script>
+<!-- <script src="../cdn/wpmonit.js?v=1.1"></script>
 <script>
   var switcher = false
   if (switcher) {
@@ -29,4 +29,4 @@
       user: 'test-again'
     })
   }
-</script>
+</script> -->
